{
  "version": 4,
  "terraform_version": "1.2.6",
  "serial": 18,
  "lineage": "18103b95-9e63-5511-32b6-74bd24e8c941",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "CR-IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:152618525073:internet-gateway/igw-01b94d597e358365f",
            "id": "igw-01b94d597e358365f",
            "owner_id": "152618525073",
            "tags": {
              "Name": "CR-IGW"
            },
            "tags_all": {
              "Name": "CR-IGW"
            },
            "vpc_id": "vpc-09e8a92528ce05f98"
          },
          "dependencies": [
            "aws_vpc.CR-project-1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "CR-Public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01b94d597e358365f",
            "id": "r-rtb-0e678d8925e6066af1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e678d8925e6066af",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.CR-IGW",
            "aws_route_table.CR-Public-route-table",
            "aws_vpc.CR-project-1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "CR-Private-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:152618525073:route-table/rtb-028fa8a6e22623324",
            "id": "rtb-028fa8a6e22623324",
            "owner_id": "152618525073",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "CR-Private-route-table"
            },
            "tags_all": {
              "Name": "CR-Private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-09e8a92528ce05f98"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.CR-project-1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "CR-Public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:152618525073:route-table/rtb-0e678d8925e6066af",
            "id": "rtb-0e678d8925e6066af",
            "owner_id": "152618525073",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01b94d597e358365f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "CR-Public-route-table"
            },
            "tags_all": {
              "Name": "CR-Public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-09e8a92528ce05f98"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.CR-project-1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "CR-Private-route-table-association-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02a34bd5bcd76bdf7",
            "route_table_id": "rtb-028fa8a6e22623324",
            "subnet_id": "subnet-0f43363e14a81955d"
          },
          "dependencies": [
            "aws_route_table.CR-Private-route-table",
            "aws_subnet.CR-private-sub-1",
            "aws_vpc.CR-project-1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "CR-Public-route-table-association-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b7f522a444e178dd",
            "route_table_id": "rtb-0e678d8925e6066af",
            "subnet_id": "subnet-09ddc430105fb3dfb"
          },
          "dependencies": [
            "aws_route_table.CR-Public-route-table",
            "aws_subnet.CR-public-sub-1",
            "aws_vpc.CR-project-1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "CR-Public-route-table-association-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09356f408887a18bb",
            "route_table_id": "rtb-0e678d8925e6066af",
            "subnet_id": "subnet-057e9a43ec00aeeaf"
          },
          "dependencies": [
            "aws_route_table.CR-Public-route-table",
            "aws_subnet.CR-public-sub-2",
            "aws_vpc.CR-project-1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "CR-private-sub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:152618525073:subnet/subnet-0f43363e14a81955d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f43363e14a81955d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "152618525073",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "CR-private-sub-1"
            },
            "tags_all": {
              "Name": "CR-private-sub-1"
            },
            "vpc_id": "vpc-09e8a92528ce05f98"
          },
          "dependencies": [
            "aws_vpc.CR-project-1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "CR-public-sub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:152618525073:subnet/subnet-09ddc430105fb3dfb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09ddc430105fb3dfb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "152618525073",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "CR-public-sub-1"
            },
            "tags_all": {
              "Name": "CR-public-sub-1"
            },
            "vpc_id": "vpc-09e8a92528ce05f98"
          },
          "dependencies": [
            "aws_vpc.CR-project-1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "CR-public-sub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:152618525073:subnet/subnet-057e9a43ec00aeeaf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-057e9a43ec00aeeaf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "152618525073",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "CR-public-sub-2"
            },
            "tags_all": {
              "Name": "CR-public-sub-2"
            },
            "vpc_id": "vpc-09e8a92528ce05f98"
          },
          "dependencies": [
            "aws_vpc.CR-project-1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "CR-project-1-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:152618525073:vpc/vpc-09e8a92528ce05f98",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0666e5a8b6c2da0f4",
            "default_route_table_id": "rtb-0b325f24204fc036c",
            "default_security_group_id": "sg-0e572e450aa821bae",
            "dhcp_options_id": "dopt-0196f19b19014b734",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-09e8a92528ce05f98",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b325f24204fc036c",
            "owner_id": "152618525073",
            "tags": {
              "Name": "CR-project-1-vpc"
            },
            "tags_all": {
              "Name": "CR-project-1-vpc"
            }
          }
        }
      ]
    }
  ]
}